[gd_scene load_steps=4 format=3 uid="uid://goyko717eehg"]

[ext_resource type="Script" path="res://clue_containers/ClueContainerShell.gd" id="1_msx2q"]
[ext_resource type="Texture2D" uid="uid://civmffyad70rv" path="res://assets/close_128.png" id="2_i5xge"]
[ext_resource type="Shortcut" uid="uid://dcr5q3fqlxka7" path="res://shortcuts/esc_press.tres" id="3_bq45h"]

[node name="ClueContainerShell" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_msx2q")

[node name="ClueContainerSubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -720.0
offset_right = 720.0
offset_bottom = 1080.0
grow_horizontal = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ClueContainerSubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1440, 1080)
render_target_update_mode = 4

[node name="Panel" type="Panel" parent="ClueContainerSubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"MenuShade"

[node name="CloseButtonPanelContainer" type="PanelContainer" parent="ClueContainerSubViewportContainer/SubViewport"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0
mouse_filter = 1
theme_type_variation = &"BookPanel"

[node name="CloseTextureRect" type="TextureRect" parent="ClueContainerSubViewportContainer/SubViewport/CloseButtonPanelContainer"]
layout_mode = 2
texture = ExtResource("2_i5xge")

[node name="CloseButton" type="Button" parent="ClueContainerSubViewportContainer/SubViewport/CloseButtonPanelContainer"]
layout_mode = 2
tooltip_text = "Close"
shortcut = ExtResource("3_bq45h")

[connection signal="pressed" from="ClueContainerSubViewportContainer/SubViewport/CloseButtonPanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
